--- a/_config.yml
+++ b/_config.yml
@@ -18,22 +18,33 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: _offsetseven blog
+email: jshimoda@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  A blog about things.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+#twitter_username: none
+github_username:  zoneddecimal
 
 # Build settings
-theme: minima
+#theme: minima
+#theme: jekyll-theme-time-machine
+theme: jekyll-theme-midnight
+
+#show_downloads: "false"
 plugins:
   - jekyll-feed
 
+    #defaults:
+    #  -
+    #    scope:
+    #      path: ""
+    #      type: "posts" # Files in _posts
+    #    values:
+    #      layout: "post"
+    #      title: "set the title!"
+    #
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
@@ -42,7 +53,9 @@ plugins:
 # Excluded items can be processed by explicitly listing the directories or
 # their entries' file path in the `include:` list.
 #
-# exclude:
+ exclude:
+   - images/
+
 #   - .sass-cache/
 #   - .jekyll-cache/
 #   - gemfiles/
