--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,8 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: _offsetseven blog
-email: jshimoda@gmail.com
+title: "_offsetseven blog"
+email: "jshimoda@gmail.com"
 description: >- # this means to ignore newlines until "baseurl:"
   A blog about things.
 baseurl: "" # the subpath of your site, e.g. /blog
