--- a/_config.yml
+++ b/_config.yml
@@ -17,13 +17,12 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-
-title: "_offsetseven blog"
+title: "offsetseven blog"
 email: "jshimoda@gmail.com"
 description: >- # this means to ignore newlines until "baseurl:"
   A blog about things.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/" # the subpath of your site, e.g. /blog
+url: "https://zoneddecimal.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: none
 github_username:  zoneddecimal
 
@@ -35,16 +34,15 @@ theme: jekyll-theme-midnight
 #show_downloads: "false"
 plugins:
   - jekyll-feed
-
-    #defaults:
-    #  -
-    #    scope:
-    #      path: ""
-    #      type: "posts" # Files in _posts
-    #    values:
-    #      layout: "post"
-    #      title: "set the title!"
-    #
+#defaults:
+#  -
+#    scope:
+#      path: ""
+#      type: "posts" # Files in _posts
+#    values:
+#      layout: "post"
+#      title: "set the title!"
+#
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
@@ -53,16 +51,15 @@ plugins:
 # Excluded items can be processed by explicitly listing the directories or
 # their entries' file path in the `include:` list.
 #
- exclude:
-   - images/
-
-#   - .sass-cache/
-#   - .jekyll-cache/
-#   - gemfiles/
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules/
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
+exclude:
+  - images/
+  - .sass-cache/
+  - .jekyll-cache/
+  - gemfiles/
+  - Gemfile
+  - Gemfile.lock
+  - node_modules/
+  - vendor/bundle/
+  - vendor/cache/
+  - vendor/gems/
+  - vendor/ruby/
